Update the 101% table height to use a fixed scrollbar via CSS (#28)
Tested on Windows 10 on latest Chrome, Firefox 43+47+48+49, Internet Explorer 11+10 (and emulated 9+8+7) and Microsoft Edge 38.

--- a/default.css
+++ b/default.css
@@ -33,6 +33,10 @@ a:visited { text-decoration: none; }
 
 a:hover { text-decoration: underline; }
 
+html {
+  overflow-y: scroll;
+}
+
 body {
   font-size: 10pt;
   font-family: verdana;
